--- a/css/docs.css
+++ b/css/docs.css
@@ -242,10 +242,10 @@ body {
 }
 
 :root {
-  --nsw-brand-dark: #4c26a1;
-  --nsw-brand-light: #bfaaec;
-  --nsw-brand-supplementary: #7e4aee;
-  --nsw-brand-accent: #4c26a1;
+  --nsw-brand-dark: #39b54a;
+  --nsw-brand-light: #8cc63f;
+  --nsw-brand-supplementary: #009245;
+  --nsw-brand-accent: #39b54a;
   --nsw-brand-accent-light: #ffe6ea;
   --nsw-black: #000000;
   --nsw-grey-01: #22272b;
